plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1' apply false
    id 'io.spring.dependency-management' version '1.1.7'
    id 'io.freefair.lombok' version '8.12.2' apply false
    id 'jacoco'
}

allprojects {
    group = 'com.company'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
        google()
        maven { url 'https://maven.egovframe.go.kr/maven/' }
    }

    apply plugin: 'jacoco'
    jacoco {
        toolVersion = "0.8.12"
    }
}

// 하이브리드 의존성 관리를 위한 설정



subprojects {
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'io.freefair.lombok'
    apply plugin: 'jacoco'

    jacoco {
        toolVersion = "0.8.12"
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs << "-parameters"
    }

    tasks.withType(Test).configureEach {
        systemProperty 'file.encoding', 'UTF-8'
        useJUnitPlatform()
        systemProperties System.properties
        maxHeapSize = "6144m"
        ignoreFailures = true
        jacoco {
            destinationFile = file("${project.projectDir}/build/jacoco/test.exec").absoluteFile
        }
        finalizedBy 'jacocoTestReport'
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.1"
        }
    }

    dependencies {
        implementation 'com.google.code.findbugs:jsr305:3.0.2'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.security:spring-security-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    jacocoTestReport {
        reports {
            xml.required = true
            html.required = true
        }
    }
}

// 명시적 파일 경로 병합 기반 통합 리포트
tasks.register("jacocoRootReport", JacocoReport) {
    group = "Verification"
    description = "Generates an aggregate JaCoCo report from all subprojects"

    dependsOn(subprojects.test)

    // 실행 시점(Lazy evaluation)에 생성된 모든 .exec 파일 수집
    executionData.setFrom(project.files {
        fileTree(dir: project.rootDir, include: "**/build/jacoco/*.exec").files
    })

    subprojects.each { subproject ->
        subproject.plugins.withType(JavaPlugin) {
            sourceDirectories.from(subproject.sourceSets.main.allSource.srcDirs)
            classDirectories.from(subproject.sourceSets.main.output.classesDirs.collect {
                fileTree(dir: it, exclude: [
                    "**/Q*.class",
                    "**/Q*Entity.class",
                    "**/*Request.class",
                    "**/*Response.class",
                    "**/*Dto.class",
                    "**/dto/**",
                    "**/*Config.class",
                    "**/*Application.class",
                    "**/*VO.class",
                    "**/*DAO.class",
                    "**/*Mapper.class",
                    "**/*Initializer.class",
                    "**/*Advice.class",
                    "**/*RepositoryImpl.class"
                ])
            })
        }
    }

    reports {
        html.required = true
        xml.required = true
        html.outputLocation = layout.buildDirectory.dir("reports/jacoco/aggregated")
    }
}
